Kubernetes/06-springexample/k8s/development/proxy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: springexample.dev.localhost
    http:
      paths:
      - path: /users
        backend:
          serviceName: user-service
          servicePort: 8080
      - path: /orders
        backend:
          serviceName: order-service
          servicePort: 8080
